// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DependenciesApp component on creation given the dependency list job has not yet run shows only the empty state 1`] = `
Object {
  "compact": false,
  "description": null,
  "primaryButtonLink": null,
  "primaryButtonText": null,
  "secondaryButtonLink": null,
  "secondaryButtonText": null,
  "svgHeight": null,
  "svgPath": "/bar.svg",
  "title": "View dependency details for your project",
}
`;

exports[`DependenciesApp component on creation given there are no dependencies detected shows only the empty state 1`] = `
Object {
  "compact": false,
  "description": null,
  "primaryButtonLink": null,
  "primaryButtonText": null,
  "secondaryButtonLink": null,
  "secondaryButtonText": null,
  "svgHeight": null,
  "svgPath": "/bar.svg",
  "title": "Dependency List has no entries",
}
`;
